tests/compiler/errors/global_nonexistent.casa
# expect: UNDEFINED_GLOBAL

fn foo {
    global NONEXISTENT
    0 = NONEXISTENT
}
foo
